<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/noteItemLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="5dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:padding="8dp"
        app:cardCornerRadius="13dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/noteItemTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:ellipsize="end"
                android:fontFamily="@font/google_sans_medium"
                android:padding="5dp"
                android:text="@string/this_is_title"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </com.google.android.material.textview.MaterialTextView>

            <TextView
                android:id="@+id/noteContentTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="3dp"
                android:fontFamily="@font/google_sans_medium"
                android:maxLines="12"
                android:padding="5dp"
                android:text="@string/some"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/noteItemTitle"
                app:layout_constraintStart_toStartOf="@+id/noteItemTitle"
                app:layout_constraintTop_toBottomOf="@+id/noteItemTitle"></TextView>


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/noteDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:drawableStart="@drawable/ic_outline_calendar_today_24"
                android:drawablePadding="6dp"
                android:ellipsize="end"
                android:fontFamily="@font/google_sans_regular"
                android:padding="5dp"
                android:text="@string/date"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@id/noteContentTitle"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/noteContentTitle"
                app:layout_constraintTop_toBottomOf="@+id/noteContentTitle"></com.google.android.material.textview.MaterialTextView>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>



</androidx.constraintlayout.widget.ConstraintLayout>