<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_scrollFlags="scroll|enterAlways">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/appTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="2dp"
                    android:fontFamily="@font/google_sans_bold"
                    android:text="@string/my_notes">
                </com.google.android.material.textview.MaterialTextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/appTitle"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginEnd="15dp">

                    <EditText
                        android:id="@+id/searchView"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/rounded_search"
                        android:drawableStart="@drawable/ic_baseline_search_24"
                        android:drawablePadding="8dp"
                        android:imeOptions="actionSearch"
                        android:hint="@string/search_here"
                        android:paddingStart="18dp"
                        android:paddingEnd="18dp"
                        android:paddingTop="4dp"
                        android:paddingBottom="5dp"
                        android:textSize="16sp"
                        android:importantForAutofill="no"
                        android:inputType="textFilter">

                    </EditText>

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvNote"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:clipToPadding="false"
        android:padding="5dp"
        android:transitionGroup="true"
        android:paddingStart="6dp"
        tools:listitem="@layout/note_item"
        tools:itemCount="3">

    </android.support.v7.widget.RecyclerView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/noteData"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@drawable/ic_no_data"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone">
        </ImageView>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:focusable="true"
        android:clickable="true"
        android:animateLayoutChanges="true"
        android:orientation="horizontal"
        android:clipToPadding="false"
        android:background="@drawable/fab_btn_corner"
        android:layout_margin="16dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/innerFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:backgroundTint="@color/black"
            android:elevation="0dp"
            android:tint="@color/white"
            app:useCompatPadding="false"
            android:src="@drawable/ic_round_add_24">

        </com.google.android.material.floatingactionbutton.FloatingActionButton>

        <TextView
            android:id="@+id/chatFabText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/google_sans_regular"
            android:textAllCaps="false"
            android:paddingStart="3dp"
            android:paddingEnd="20dp"
            android:text="@string/add_notes"
            android:layout_gravity="center_vertical"
            android:textColor="@color/white"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button">

        </TextView>
    </LinearLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>